adiciona jquery e funcao ajax para obter dados

--- a/Reservasala/frontend/index.htm
+++ b/Reservasala/frontend/index.htm
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+<script src = "jquery.min.js"></script>
 <script src="script.js"></script>
 
 <body class="vh-100 d-flex align-items-center">
@@ -20,8 +21,8 @@
 
         <div class="form-group mb-3">
           <label for="primeiroNumero" class="form-label fs-5">Selecione a sala que deseja alugar</label>
-          <select class="form-select" aria-label="Default select example">
-            <option selected>Selecione a Sala</option>
+          <select id = "roomselect" class="form-select" aria-label="Default select example">
+           
 
           </select>
         </div>
