--- a/Reservasala/frontend/index.htm
+++ b/Reservasala/frontend/index.htm
@@ -10,7 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<script src = "jquery.min.js"></script>
+<script src = "lib/jquery.min.js"></script>
+<script src = "lib/notify.min.js"></script>
 <script src="script.js"></script>
 
 <body class="vh-100 d-flex align-items-center">
