correção de erros
corrige erros no request do frontend, e os ifs malformados no backend.

--- a/Reservasala/frontend/index.htm
+++ b/Reservasala/frontend/index.htm
@@ -23,31 +23,27 @@
         <div class="form-group mb-3">
           <label for="primeiroNumero" class="form-label fs-5">Selecione a sala que deseja alugar</label>
           <select id = "roomselect" class="form-select" aria-label="Default select example">
-           
-
           </select>
         </div>
 
         <div class="form-group mb-3">
           <label for="primeiroNumero" class="form-label fs-5">Selecione o dia da semana</label>
           <select id = "dayselect" class="form-select" aria-label="Default select example">
-            <option selected>Selecione o dia da Semana</option>
-            <option value="1">Segunda</option>
-            <option value="2">Terça</option>
-            <option value="3">Quarta</option>
-            <option value="4">Quinta</option>
-            <option value="5">Sexta</option>
-            <option value="6">Sabado</option>
-            <option value="7">Domingo</option>
+            <option value="0">Segunda</option>
+            <option value="1">Terça</option>
+            <option value="2">Quarta</option>
+            <option value="3">Quinta</option>
+            <option value="4">Sexta</option>
+            <option value="5">Sabado</option>
+            <option value="6">Domingo</option>
           </select>
         </div>
         <div class="form-group mb-3">
           <label for="primeiroNumero" class="form-label fs-5">Selecione o Horário da Locação</label>
           <select id = "periodselect" class="form-select" aria-label="Default select example">
-            <option selected>Selecione o periodo do Dia</option>
-            <option value="1">Manhã</option>
-            <option value="2">Tarde</option>
-            <option value="3">Noite</option>
+            <option value="morning">Manhã</option>
+            <option value="evening">Tarde</option>
+            <option value="night">Noite</option>
           </select>
         </div>
         <button id="btnLimpar" type="button" class="btn btn-outline-dark btn-lg px-5 mt-3">Limpar</button>
